<?xml version="1.0" encoding="UTF-8"?>
<project xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
  xmlns="http://maven.apache.org/POM/4.0.0"
  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
  <artifactId>foodi</artifactId>

  <build>
    <plugins>
      <plugin>
        <artifactId>maven-compiler-plugin</artifactId>
        <configuration>
          <source>17</source>
          <target>17</target>
        </configuration>
        <groupId>org.apache.maven.plugins</groupId>
        <version>3.8.1</version>
      </plugin>
      <plugin>
        <artifactId>maven-jar-plugin</artifactId>
        <executions>
          <execution>
            <id>default-jar</id>
          </execution>
        </executions>
        <groupId>org.apache.maven.plugins</groupId>
        <version>2.4</version>
      </plugin>
      <plugin>
        <artifactId>maven-surefire-plugin</artifactId>
        <groupId>org.apache.maven.plugins</groupId>
        <version>3.0.0-M5</version>
      </plugin>
      <plugin>
        <artifactId>maven-assembly-plugin</artifactId>
        <executions>
          <execution>
            <configuration>
              <archive>
                <manifest>
                  <mainClass>
                    no.ntnu.idatt1005.foodi.Main
                  </mainClass>
                </manifest>
              </archive>
              <descriptorRefs>
                <descriptorRef>jar-with-dependencies</descriptorRef>
              </descriptorRefs>
            </configuration>
            <goals>
              <goal>single</goal>
            </goals>
            <phase>package</phase>
          </execution>
        </executions>
        <groupId>org.apache.maven.plugins</groupId>
      </plugin>
      <plugin>
        <artifactId>javafx-maven-plugin</artifactId>
        <executions>
          <execution>
            <!-- Default configuration for running with: mvn clean javafx:run -->
            <configuration>
              <jlinkImageName>app</jlinkImageName>
              <jlinkZipName>app</jlinkZipName>
              <launcher>app</launcher>
              <mainClass>no.ntnu.idatt1005.foodi.Main</mainClass>
              <noHeaderFiles>true</noHeaderFiles>
              <noManPages>true</noManPages>
              <release>${maven.compiler.target}</release>
              <stripDebug>true</stripDebug>
            </configuration>
            <id>default-cli</id>
          </execution>
        </executions>
        <groupId>org.openjfx</groupId>
        <version>0.0.8</version>
      </plugin>
      <plugin>
        <artifactId>jacoco-maven-plugin</artifactId>
        <executions>
          <execution>
            <goals>
              <goal>prepare-agent</goal>
            </goals>
            <id>prepare-agent</id>
          </execution>
          <execution>
            <configuration>
              <outputDirectory>${project.build.directory}/jacoco/coverage-reports/</outputDirectory>
            </configuration>
            <goals>
              <goal>report</goal>
            </goals>
            <id>report</id>
            <phase>test</phase>
          </execution>
        </executions>
        <groupId>org.jacoco</groupId>
        <version>0.8.8</version>
      </plugin>
      <plugin>
        <artifactId>maven-javadoc-plugin</artifactId>
        <configuration>
          <nohelp>true</nohelp>
          <show>private</show>
        </configuration>
        <groupId>org.apache.maven.plugins</groupId>
        <version>3.5.0</version>
      </plugin>
    </plugins>
  </build>
  <dependencies>
    <dependency>
      <artifactId>javafx-controls</artifactId>
      <groupId>org.openjfx</groupId>
      <version>${javafx.version}</version>
    </dependency>

    <dependency>
      <artifactId>javafx-fxml</artifactId>
      <groupId>org.openjfx</groupId>
      <version>${javafx.version}</version>
    </dependency>

    <dependency>
      <artifactId>javafx-base</artifactId>
      <groupId>org.openjfx</groupId>
      <version>${javafx.version}</version>
    </dependency>

    <dependency>
      <artifactId>javafx-graphics</artifactId>
      <groupId>org.openjfx</groupId>
      <version>${javafx.version}</version>
    </dependency>

    <dependency>
      <artifactId>javafx-web</artifactId>
      <groupId>org.openjfx</groupId>
      <version>11.0.2</version>
    </dependency>

    <dependency>
      <artifactId>javafx-media</artifactId>
      <groupId>org.openjfx</groupId>
      <version>11.0.2</version>
    </dependency>

    <dependency>
      <artifactId>javafx-swing</artifactId>
      <groupId>org.openjfx</groupId>
      <version>11.0.2</version>
    </dependency>

    <dependency>
      <artifactId>sqlite-jdbc</artifactId>
      <groupId>org.xerial</groupId>
      <version>3.36.0.3</version>
    </dependency>

    <dependency>
      <artifactId>junit-jupiter-api</artifactId>
      <groupId>org.junit.jupiter</groupId>
      <scope>test</scope>
      <version>${junit.version}</version>
    </dependency>

    <dependency>
      <artifactId>junit-jupiter-engine</artifactId>
      <groupId>org.junit.jupiter</groupId>
      <scope>test</scope>
      <version>${junit.version}</version>
    </dependency>

    <dependency>
      <artifactId>maven-assembly-plugin</artifactId>
      <groupId>org.apache.maven.plugins</groupId>
      <version>3.3.0</version>
    </dependency>

    <dependency>
      <artifactId>jSystemThemeDetector</artifactId>
      <groupId>com.github.Dansoftowner</groupId>
      <version>3.8</version>
    </dependency>

    <dependency>
      <artifactId>slf4j-api</artifactId>
      <groupId>org.slf4j</groupId>
      <version>1.7.36</version>
    </dependency>

    <dependency>
      <artifactId>slf4j-simple</artifactId>
      <groupId>org.slf4j</groupId>
      <version>1.7.36</version>
    </dependency>

    <dependency>
      <artifactId>h2</artifactId>
      <groupId>com.h2database</groupId>
      <scope>runtime</scope>
      <version>2.2.224</version>
    </dependency>
    <dependency>
      <artifactId>annotations</artifactId>
      <groupId>org.jetbrains</groupId>
      <version>24.0.1</version>
    </dependency>
  </dependencies>
  <groupId>no.ntnu.idatt1005.foodi</groupId>
  <modelVersion>4.0.0</modelVersion>
  <name>demo</name>

  <packaging>jar</packaging>

  <properties>
    <javafx.version>21.0.2</javafx.version>
    <junit.version>5.8.1</junit.version>
    <maven.compiler.source>17</maven.compiler.source>
    <maven.compiler.target>17</maven.compiler.target>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
  </properties>

  <repositories>
    <repository>
      <id>jitpack.io</id>
      <url>https://jitpack.io</url>
    </repository>
  </repositories>

  <version>1.0-SNAPSHOT</version>
</project>
